--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="at">\@</string>
+    <string name="select_a_post_to_see_the_comments">Select a post to see the comments</string>
+    <string name="posts_title">Posts</string>
 </resources>
