Added Menu options
Added main_menu
Fixed Toolbar title based on Fragment lifecycle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="at">\@</string>
     <string name="select_a_post_to_see_the_comments">Select a post to see the comments</string>
     <string name="posts_title">Posts</string>
+    <string name="show_users">Show Users</string>
+    <string name="show_latest_posts">Show latest posts</string>
+    <string name="close_app">Close app</string>
 </resources>
