--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="welcome">Welcome</string>
     <string name="get_started">GET STARTED</string>
     <string name="this_is_an_example_of_a_welcome_screen">This is an example of a welcome screen</string>
+    <string name="urlImage">"https://api.adorable.io/avatars/285/oh.png"</string>
 </resources>
