Added AlbumImage Fragment
testing
layout
resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="label_users">Users</string>
     <string name="posts_label">Posts</string>
     <string name="gallery_label">Gallery</string>
+    <string name="image_from_gallery">Image from gallery</string>
 </resources>
